# UDRMS

./: CMakeLists.txt  Main.qml  README.md  Restaurant.cpp  Restaurant.hpp  Room.hpp  backend.cpp  backend.h  dorminatory.cpp  dorminatory.hpp  main.cpp  person.cpp  person.hpp  room.cpp  student.cpp  student.hpp  university.cpp  university.hpp
